--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <base href="/">
   <title>Live Resume - Sanaet Sankui</title>
-  <meta name="keywords" content="Web Developer, Full-stack Engineer, Cloud Engineer, Sanaet Sankui Live Resume, Sanaet Sankui Resume, Sanaet Sankui CV, sanaet.tech"/>
+  <meta name="keywords" content="Web Developer, Security Engineer, Cloud Engineer, Sanaet Sankui Live Resume, Sanaet Sankui Resume, Sanaet Sankui CV, sanaet.tech"/>
   <meta name="robots" content="index, follow"/>
   <meta name="author" content="Sanaet Sankui"/>   <!-- Please, keep the 'author' copy rights -->
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content="Hello, I'm Sanaet Sankui, a cloud-focused full-stack engineer building delightful web and mobile experiences. Find out more in my live resume!"/>
+  <meta name="description" content="Hello, I'm Sanaet Sankui, a security-focused software developer building resilient cloud solutions. Explore my live resume!"/>
   <!-- Facebook meta properties -->
   <meta property="og:title" content="Live Resume - Sanaet Sankui"/> 
-  <meta property="og:image" content="./assets/og-image.png"/>
+  <meta property="og:image" content="./assets/template/welcome/Illustration.svg"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url"  content="https://www.sanaet.tech/" />
   <meta property="og:title" content="Live Resume - Sanaet Sankui" />
-  <meta property="og:description" content="Hello, I'm Sanaet Sankui, a cloud-focused full-stack engineer building delightful web and mobile experiences. Find out more in my live resume!" />
+  <meta property="og:description" content="Hello, I'm Sanaet Sankui, a security-focused software developer building resilient cloud solutions. Explore my live resume!" />
   <!-- All the favicon -->
   <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
