fix(share): use absolute og image

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Hello, I'm Sanaet Sankui, a security-focused software developer building resilient cloud solutions. Explore my live resume!"/>
   <!-- Facebook meta properties -->
   <meta property="og:title" content="Live Resume - Sanaet Sankui"/> 
-  <meta property="og:image" content="./assets/template/welcome/Illustration.svg"/>
+  <meta property="og:image" content="https://www.sanaet.tech/assets/template/welcome/Illustration.svg"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url"  content="https://www.sanaet.tech/" />
   <meta property="og:title" content="Live Resume - Sanaet Sankui" />
